--- a/careers/careers.html
+++ b/careers/careers.html
@@ -1356,7 +1356,7 @@
                                 <li><i class="fas fa-home"></i> Phone: + 1 (234) 567 8901 </li>
                                 <li><i class="fas fa-phone"></i> Phone: + 1 (234) 567 8901</li>
                                 <li><i class="fas fa-fax"></i> + 1 (234) 567 8901</li>
-                                <li><i class="fas fa-envelope"></i> arzumg@code.edu.az</li>
+                                <li><i class="fas fa-envelope"></i> RaufAg@code.edu.az</li>
                             </ul>
                         </div>
 
@@ -1371,7 +1371,7 @@
                                 <div class="recent-post-text">
                                     <h5>Clean And Modern</h5>
                                     <p>Lorem ipsum dolor sit</p>
-                                    <small>by Arzu Guliyev 15 April</small>
+                                    <small>by Rauf Qocayev 15 April</small>
                                 </div>
                             </div>
 
@@ -1380,7 +1380,7 @@
                                 <div class="recent-post-text">
                                     <h5>Clean And Modern</h5>
                                     <p>Lorem ipsum dolor sit</p>
-                                    <small>by Arzu Guliyev 15 April</small>
+                                    <small>by Rauf Qocayev 15 April</small>
                                 </div>
                             </div>
                         </div>
@@ -1455,7 +1455,7 @@
                 <li><a href="#"><i class="fab fa-wordpress"></i></a></li>
                 <li><a href="#"><i class="fab fa-android"></i></a></li>
             </ul>
-            <p>Copyright © 2019 l Arzu Guliyev. All rights reserved.</p>
+            <p>Copyright © 2019 l Rauf Qocayev. All rights reserved.</p>
         </div>
     </footer>
 
