--- a/index.html
+++ b/index.html
@@ -1070,7 +1070,7 @@
                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum totam maxime dignissimos architecto cupiditate.</p>
                        
                        <div style="text-align: center">
-                        <h3>Arzu</h3>
+                        <h3>Rauf</h3>
                         <span style="color: orange">Nolam turpis</span>
                        </div>
                     </div> 
@@ -1078,7 +1078,7 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum totam maxime dignissimos architecto cupiditate.</p>
                        
                             <div style="text-align: center">
-                             <h3>Arzu</h3>
+                             <h3>Rauf</h3>
                              <span style="color: orange">Nolam turpis</span>
                             </div>
                     </div>
@@ -1161,7 +1161,7 @@
                         <li><i class="fas fa-home"></i> Phone: + 1 (234) 567 8901 </li>
                         <li><i class="fas fa-phone"></i> Phone: + 1 (234) 567 8901</li>
                         <li><i class="fas fa-fax"></i>  + 1 (234) 567 8901</li>
-                        <li><i class="fas fa-envelope"></i> arzumg@code.edu.az</li>
+                        <li><i class="fas fa-envelope"></i> RaufAg@code.edu.az</li>
                     </ul>
                 </div>  
 
@@ -1176,7 +1176,7 @@
                         <div class="recent-post-text">
                             <h5>Clean And Modern</h5>
                             <p>Lorem ipsum dolor sit</p>
-                            <small>by Arzu Guliyev 15 April</small>
+                            <small>by Rauf Qocayev 15 April</small>
                         </div>
                     </div>
 
@@ -1185,7 +1185,7 @@
                         <div class="recent-post-text">
                             <h5>Clean And Modern</h5>
                             <p>Lorem ipsum dolor sit</p>
-                            <small>by Arzu Guliyev 15 April</small>
+                            <small>by Rauf Qocayev 15 April</small>
                         </div>
                     </div>
                  </div>
@@ -1260,7 +1260,7 @@
            <li><a href="#"><i class="fab fa-wordpress"></i></a></li>
            <li><a href="#"><i class="fab fa-android"></i></a></li>
        </ul>
-       <p>Copyright © 2019 l Arzu Guliyev. All rights reserved.</p>
+       <p>Copyright © 2019 l Rauf Qocayev. All rights reserved.</p>
    </div>
 </footer>
 <script src="js/slider.js"></script>
