--- a/faq/faq.html
+++ b/faq/faq.html
@@ -683,7 +683,7 @@
                                     <li><i class="fas fa-home"></i> Phone: + 1 (234) 567 8901 </li>
                                     <li><i class="fas fa-phone"></i> Phone: + 1 (234) 567 8901</li>
                                     <li><i class="fas fa-fax"></i> + 1 (234) 567 8901</li>
-                                    <li><i class="fas fa-envelope"></i> arzumg@code.edu.az</li>
+                                    <li><i class="fas fa-envelope"></i> RaufAg@code.edu.az</li>
                                 </ul>
                             </div>
     
@@ -698,7 +698,7 @@
                                     <div class="recent-post-text">
                                         <h5>Clean And Modern</h5>
                                         <p>Lorem ipsum dolor sit</p>
-                                        <small>by Arzu Guliyev 15 April</small>
+                                        <small>by Rauf Qocayev 15 April</small>
                                     </div>
                                 </div>
     
@@ -707,7 +707,7 @@
                                     <div class="recent-post-text">
                                         <h5>Clean And Modern</h5>
                                         <p>Lorem ipsum dolor sit</p>
-                                        <small>by Arzu Guliyev 15 April</small>
+                                        <small>by Rauf Qocayev 15 April</small>
                                     </div>
                                 </div>
                             </div>
@@ -782,7 +782,7 @@
                     <li><a href="#"><i class="fab fa-wordpress"></i></a></li>
                     <li><a href="#"><i class="fab fa-android"></i></a></li>
                 </ul>
-                <p>Copyright © 2019 l Arzu Guliyev. All rights reserved.</p>
+                <p>Copyright © 2019 l Rauf Qocayev. All rights reserved.</p>
             </div>
         </footer>
 
